--- a/ex1/ex1.css
+++ b/ex1/ex1.css
@@ -1,2 +1,12 @@
 /* 🦊 Créez vos styles ici */
 /* Colors: #5d3a3a, #b5e0ba  */
+
+body {
+  background-color: #5d3a3a;
+}
+
+div {
+  background-color: #b5e0ba;
+  width: 200px;
+  height: 200px;
+}
